--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -8,7 +8,7 @@
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#menu1">Glucose</a></li>
           <li><a data-toggle="tab" href="#menu2">Blood Pressure</a></li>
-          <li><a data-toggle="tab" href="#menu3">Pulse</a></li>
+          <!-- <li><a data-toggle="tab" href="#menu3">Pulse</a></li> -->
           <li><a data-toggle="tab" href="#menu4">Clinic Visit</a></li>
         </ul>
 
@@ -24,26 +24,26 @@
                 <div class="healthrecord">
                   <%= f.fields_for :glucoses do |task_form| %>
                   <div class="col-xs-12 col-sm-12 col-md-2">
-                     <%= task_form.date_field :date_taken, class:"form-control", id: "date", placeholder:"Date" %>
+                     <%= task_form.date_field :date_taken, class:"form-control", placeholder:"Date" %>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-2">
-                     <%= task_form.date_field :time_taken,class:"form-control", id:"time", placeholder:"Time" %>
+                     <%= task_form.date_field :time_taken,class:"form-control", placeholder:"Time" %>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.text_field :measurement,class:"form-control", placeholder: "Measurement" %>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-2">
-                     <%= task_form.text_field :measurement,class:"form-control", id:"measurement", placeholder: "Measurement" %>
-                  </div>
-                  <div class="col-xs-12 col-sm-12 col-md-2">
-                     <%= task_form.select :context, Glucose.contexts.keys.to_a, class:"form-control", id:"context" %>
+                     <%= task_form.select :context, Glucose.contexts.keys.to_a, class:"form-control" %>
                   </div>
                   <div class="col-xs-12 col-sm-12 col-md-2">
                     <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
-                    <%= task_form.submit "submit", class: "btn btn-warning" %>
+
                   </div>
                   <% end %>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-2">
+
                 <%= f.link_to_add "Add a New Record", :glucoses, class: "btn btn-primary"%>
-                </div>
+                  <%= f.submit "submit", class: "btn btn-warning" %>
                 <% end %>
 
               </div>
@@ -75,7 +75,7 @@
                  <% end %>
                 </tbody>
               </table>
-    
+
 
             </div>
           </div>
@@ -85,63 +85,70 @@
           <div id="menu2" class="tab-pane fade">
             <div class="daily_update_pressure">
               <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-2">
-                  <input type="date" class="form-control" id="date" placeholder="Date">
-                  <br>
+
+                <%= nested_form_for @user do |f| %>
+                <div class="healthrecord">
+                  <%= f.fields_for :pressures do |task_form| %>
+                  <div class="col-xs-12 col-sm-12 col-md-2">
+                     <%= task_form.date_field :date_taken, class:"form-control", placeholder:"Date" %>
+                   </div>
+                   <div class="col-xs-12 col-sm-12 col-md-2">
+                     <%= task_form.time_field :time_taken, class:"form-control", placeholder: "Time" %>
+                   </div>
+                   <div class="col-xs-12 col-sm-12 col-md-2">
+                     <%= task_form.text_field :sbp, class:"form-control", placeholder: "SBP (mmHg)" %>
+                     <%= task_form.text_field :dpb,class:"form-control", placeholder: "DBP (mmHg)" %>
+                   </div>
+                   <div class="col-xs-12 col-sm-12 col-md-3">
+                     <%= task_form.select :context, Pressure .contexts.keys.to_a, class:"form-control" %>
+                   </div>
+                   <div class="col-xs-12 col-sm-12 col-md-2">
+                    <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
+
+                  </div>
+                  <% end %>
                 </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-2">
-                  <input type="time" class="form-control" id="time" placeholder="Time">
-                  <br>
-                </div>
+                <%= f.link_to_add "Add a New Record", :pressures, class: "btn btn-info new-record", id:"record2"%>
+                <%= f.submit "submit", class: "btn btn-warning", id:"submit2" %>
+                <% end %>
 
-                <div class="col-xs-12 col-sm-12 col-md-2">
-                  <input type="text" class="form-control" id="sbp" placeholder="SBP (mmHg)">
-                  <br>
-                  <input type="text" class="form-control" id="dbp" placeholder="DBP (mmHg)">
-                  <br>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-3">
-                   <select class="form-control" id="context">
-                    <option>At Rest</option>
-                    <option>After Activity</option>
-                  </select>
-                  <br>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-2">
-                  <button class="btn btn-primary">Update</button>
-                  <br>
-                </div>
               </div>
 
               <br>
-
               <table class="table table-bordered custom">
-                <tr>
-                  <th>Date</th>
-                  <th>Time</th>
-                  <th>SBP/DBP (mmHg)</th>
-                  <th>Remarks</th>
-                </tr>
+                <thead>
+                  <tr>
+                    <td> sbp </td>
+                    <td> dpb </td>
+                    <td> Index</td>
+                    <td> Date Taken </td>
+                    <td> Time Taken </td>
+                  </tr>
+                </thead>
 
-                <tr>
-                  <td>04/05/2016</td>
-                  <td>2:06 PM</td>
-                  <td>12/60</td>
-                  <td>At Rest</td>
-                </tr>
+                <tbody>
+                  <%if @user_pressure != nil  %>
+                  <%  @user_pressure.all.each do |health_record| %>
+                   <tr>
 
-                <tr>
-                  <td>11/05/2016</td>
-                  <td>9:30 AM</td>
-                  <td>12/60</td>
-                  <td>After Activity</td>
-                </tr>
+                     <td><%= health_record.sbp %> </td>
+                     <td><%= health_record.dpb %> </td>
+                     <td><%= health_record.context %> </td>
+                     <td><%= health_record.date_taken%> </td>
+                     <td><%= health_record.time_taken%></td>
+
+                   </tr>
+                   <% end %>
+                 <% end %>
+                </tbody>
               </table>
+
+
             </div>
           </div>
+
+<!-- pulse -->
           <div id="menu3" class="tab-pane fade">
             <div class="daily_update_pulse">
               <div class="row">
@@ -201,67 +208,82 @@
               </table>
             </div>
           </div>
-                     <div id="menu4" class="tab-pane fade">
+
+
+          <div id="menu4" class="tab-pane fade">
             <div class="daily_update_clinic">
               <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="date" class="form-control" id="date" placeholder="Date">
-                  <br>
-                </div>
+                <%= nested_form_for @user do |f| %>
 
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="time" class="form-control" id="time" placeholder="Time">
-                  <br>
-                </div>
+                <div class="healthrecord">
+                  <%= f.fields_for :clinic_records do |task_form| %>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.date_field :visit_date, class:"form-control", placeholder:"Date"%>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.time_field :visit_time, class:"form-control", placeholder:"Time"%>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.text_field :clinic_name, class:"form-control", placeholder:"Clinic Name" %>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.text_field :problem, class:"form-control", placeholder:"Problem (e.g: Fever)" %>
+                  </div>
 
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="text" class="form-control" id="location" placeholder="Clinic Name">
-                  <br>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="text" class="form-control" id="desc" placeholder="Problem (e.g: Fever)">
-                  <br>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="text" class="form-control" id="desc" placeholder="Treatment (e.g: Antibiotic)">
-                  <br>
-                </div>
-
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <input type="text" class="form-control" id="desc" placeholder="Cost (RM)">
-                  <br>
-                </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.text_field :treatment, class:"form-control", placeholder:"Treatment (e.g: Antibiotic)" %>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-4">
+                     <%= task_form.text_field :cost,class:"form-control", placeholder:"Cost (RM)" %>
+                  </div>
 
 
-                <div class="col-xs-12 col-sm-12 col-md-4">
-                  <button class="btn btn-primary">Update</button>
-                  <br>
+                  <%= task_form.link_to_remove "Remove this record", class: "btn btn-danger"%>
+                <% end %>
                 </div>
+
+
+                <%= f.link_to_add "Add a New Record", :clinic_records, class: "btn btn-info new-record", id:"record3"%>
+                  <%= f.submit "submit", class: "btn btn-warning", id:"submit3" %>
+                <% end %>
+
               </div>
 
               <br>
 
               <table class="table table-bordered custom">
-                <tr>
-                  <th>Date</th>
-                  <th>Time</th>
-                  <th>Clinic Name</th>
-                  <th>Problem</th>
-                  <th>Treatment</th>
-                  <th>Cost</th>
-                </tr>
+                <thead>
+                  <tr>
+                    <td> Problem </td>
+                    <td> Diagnosis </td>
+                    <td> Treatment</td>
+                    <td> Clinic Name</td>
+                    <td> Cost</td>
+                    <td> Date</td>
+                    <td> Time </td>
+                  </tr>
+                </thead>
 
-                <tr>
-                  <td>04/05/2016</td>
-                  <td>2:06 PM</td>
-                  <td>Klinik Kita</td>
-                  <td>Feverish</td>
-                  <td>Quarantine</td>
-                  <td>RM 1000</td>
-                </tr>
+                <tbody>
+                  <%if @user_clinics != nil  %>
+                  <%  @user_clinics.all.each do |health_record| %>
+                   <tr>
+
+                     <td><%= health_record.problem %> </td>
+                     <td><%= health_record.diagnosis %> </td>
+                     <td><%= health_record.treatment %> </td>
+                     <td><%= health_record.clinic_name %> </td>
+                     <td><%= health_record.cost %> </td>
+                     <td><%= health_record.visit_date%> </td>
+                     <td><%= health_record.visit_time%></td>
+
+                   </tr>
+                   <% end %>
+                 <% end %>
+                </tbody>
               </table>
+
+
             </div>
           </div>
         </div>
@@ -273,6 +295,21 @@
 <script>
 
    $( ".healthrecord" ).hide();
+   $(".btn-warning").hide();
+   $("#submit2").hide();
+   $("#submit3").hide();
+
+   $(".btn-primary").click(function(){
+       $(".btn-warning").show();
+   });
+
+   $("#record2").click(function(){
+       $("#submit2").show();
+   });
+
+   $("#record3").click(function(){
+       $("#submit3").show();
+   });
 
 
 </script>
