--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -916,6 +916,7 @@
         <h4 class="modal-title">Full Blood Count</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -925,7 +926,7 @@
             </tr>
 
             <tr>
-                <td>Haemoglobin</td>
+                <td><%= @user_blood.haemoglobin %></td>
                 <td>122</td>
                 <td>g/L</td>
                 <td>115 - 165</td>
@@ -933,33 +934,34 @@
 
             <tr>
                 <td>RBC</td>
-                <td>4.48</td>
+                <td><%= @user_blood.rbc%></td>
                 <td>10^12/L</td>
                 <td>3.80 - 5.80</td>
             </tr>
 
             <tr>
                 <td>MCV</td>
-                <td>85</td>
+                <td><%= @user_blood.mcv%></td>
                 <td>fL</td>
                 <td>78 - 98</td>
             </tr>
 
             <tr>
                 <td>HCT</td>
-                <td>0.38</td>
+                <td><%= @user_blood.hct%></td>
                 <td>L/L</td>
                 <td>0.38 - 0.48</td>
             </tr>
 
             <tr>
                 <td>MCH</td>
-                <td>27</td>
+                <td><%= @user_blood.mch%></td>
                 <td>pg</td>
                 <td>27 - 32</td>
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -979,6 +981,7 @@
         <h4 class="modal-title">Liver Function</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -989,40 +992,41 @@
 
             <tr>
                 <td>Total Protein</td>
-                <td>122</td>
+                <td><%= @user_blood.total_protein%></td>
                 <td>g/L</td>
                 <td>115 - 165</td>
             </tr>
 
             <tr>
                 <td>RBC</td>
-                <td>4.48</td>
+                <td><%= @user_blood.rbc%></td>
                 <td>10^12/L</td>
                 <td>3.80 - 5.80</td>
             </tr>
 
             <tr>
                 <td>MCV</td>
-                <td>85</td>
+                <td><%= @user_blood.mcv%></td>
                 <td>fL</td>
                 <td>78 - 98</td>
             </tr>
 
             <tr>
                 <td>HCT</td>
-                <td>0.38</td>
+                <td><%= @user_blood.hct%></td>
                 <td>L/L</td>
                 <td>0.38 - 0.48</td>
             </tr>
 
             <tr>
                 <td>MCH</td>
-                <td>27</td>
+                <td><%= @user_blood.mch%></td>
                 <td>pg</td>
                 <td>27 - 32</td>
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1042,6 +1046,7 @@
         <h4 class="modal-title">Renal Function</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1052,7 +1057,7 @@
 
             <tr>
                 <td>Haemoglobin</td>
-                <td>122</td>
+                <td><%= @user_blood.haemoglobin%></td>
                 <td>g/L</td>
                 <td>115 - 165</td>
             </tr>
@@ -1086,6 +1091,7 @@
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1106,6 +1112,7 @@
         <h4 class="modal-title">Urinalysis</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1142,6 +1149,7 @@
                 <td></td>
             </tr>
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1162,6 +1170,7 @@
         <h4 class="modal-title">Liver Function</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1206,6 +1215,7 @@
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1226,6 +1236,7 @@
         <h4 class="modal-title">Liver Function</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1270,6 +1281,7 @@
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1288,7 +1300,9 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Renal Function</h4>
       </div>
+
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1333,6 +1347,7 @@
             </tr>
 
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1353,6 +1368,7 @@
         <h4 class="modal-title">Urinalysis</h4>
       </div>
       <div class="modal-body">
+        <% if @user_blood.present? %>
         <table class="table table-bordered">
             <tr>
                 <th>Parameter</th>
@@ -1389,6 +1405,7 @@
                 <td></td>
             </tr>
         </table>
+        <% end %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
