--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,61 @@
+<br>
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<div class="content-section-login center">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-offset-2 col-sm-8 col-lg-offset-2 col-lg-8">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Get Started Now</h2>
 
-  <div class="form-group">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, class: 'form-control' %>
-  </div>
+                    <div class="row">
+                      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                        <%= devise_error_messages! %>
+                      <div class="col-md-offset-2 col-md-8">
 
-  <div class="form-group">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name, class: 'form-control' %>
-  </div>
+                        <br>
+                        <div class="row">
+                          <div class="col-md-12">
+                            <%= f.email_field :email, autofocus: true, class:"form-control", id:"email", placeholder:"E-mail" %>
+                            <!-- <input type="email" class="form-control" id="email" placeholder="Email"> -->
+                          </div>
+                        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+                        <br>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <% if @minimum_password_length %>
+                            <em>(<%= @minimum_password_length %> characters minimum)</em>
+                            <% end %>
+                            <%= f.password_field :password, autocomplete: "off", class:"form-control", placeholder:"Password" %>
+                            <!-- <input type="password" class="form-control" id="password" placeholder="Password"> -->
+                          </div>
+                          <div class="col-md-6">
+                            <br>
+                            <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", placeholder:"Password Confirmation" %>
+                          </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                          <div class="col-md-6">
+                            <label><input type="checkbox"> I have read and accept the <br>
+                            <a href="#">VITALSYNAPSE terms and conditions</a>
+                            </label>
+                          </div>
+                          <div class="col-md-6">
+                            <%= f.submit "Sign up", class:"btn btn-success btn-block"  %>
+                          </div>
+                        </div>
+                      </div>
+                      <% end %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+                    </div>
+                    <%= render "devise/shared/links" %>
+                    <!-- row end-->
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
