--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,20 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
-  <%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
-  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <%= link_to "Log in", new_session_path(resource_name), class: "btn btn-danger btn-block"%><br />
+  <%#= link_to "LOG IN/SIGN UP WITH FACEBOOK", user_omniauth_authorize_path(:facebook), class: "btn btn-success btn-block" %>
 
+<% end -%>
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+  <%= link_to "LOG IN/SIGN UP WITH FACEBOOK ", user_omniauth_authorize_path(:facebook), class: "btn btn-info btn-block" %>
+
+    <%#= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+  <% end -%>
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-<%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
+<%#= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
+<p>Not yet a member? <%= link_to "Sign up", new_registration_path(resource_name), class:"btn btn-success" %> for free!</p>
 
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
@@ -21,11 +27,4 @@
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-  <%= link_to "Sign Up with Facebook", user_omniauth_authorize_path(:facebook) %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
-  <% end -%>
 <% end -%>
