--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -158,7 +158,7 @@
                           </div>
 
 
-                          <div class="col-xs-12 col-sm-5 col-md-5">
+                          <!-- <div class="col-xs-12 col-sm-5 col-md-5">
                               <div class="row">
                                   <div class="col-xs-12 col-sm-12 col-md-12">
                                       <div class="graph"><img alt="" class="img-responsive" src=
@@ -166,7 +166,7 @@
                                       </div>
                                   </div>
                               </div>
-                          </div>
+                          </div> -->
                       </div>
                   </div>
               </div>
@@ -218,7 +218,7 @@
                         </div>
 
 
-                        <div class="col-xs-12 col-sm-5 col-md-5">
+                        <!-- <div class="col-xs-12 col-sm-5 col-md-5">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="graph"><img alt="" class="img-responsive" src=
@@ -226,7 +226,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                         </div>
 
 
-                        <div class="col-xs-12 col-sm-5 col-md-4">
+                        <!-- <div class="col-xs-12 col-sm-5 col-md-4">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="graph"><img alt="" class="img-responsive" src=
@@ -288,7 +288,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -380,7 +380,7 @@
                         </div>
 
 
-                        <div class="col-xs-12 col-sm-5 col-md-5">
+                        <!-- <div class="col-xs-12 col-sm-5 col-md-5">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="graph"><img alt="" class="img-responsive" src=
@@ -388,7 +388,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -510,7 +510,7 @@
                           </div>
 
 
-                          <div class="col-xs-12 col-sm-5 col-md-5">
+                          <!-- <div class="col-xs-12 col-sm-5 col-md-5">
                               <div class="row">
                                   <div class="col-xs-12 col-sm-12 col-md-12">
                                       <div class="graph"><img alt="" class="img-responsive" src=
@@ -518,7 +518,7 @@
                                       </div>
                                   </div>
                               </div>
-                          </div>
+                          </div> -->
                       </div>
                   </div>
               </div>
@@ -601,7 +601,7 @@
                         </div>
 
 
-                        <div class="col-xs-12 col-sm-5 col-md-4">
+                        <!-- <div class="col-xs-12 col-sm-5 col-md-4">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                     <div class="graph"><img alt="" class="img-responsive" src=
@@ -609,7 +609,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -709,7 +709,7 @@
                             </div>
                         </div>
 
-
+<!--
                         <div class="col-xs-12 col-sm-5 col-md-5">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12">
@@ -718,7 +718,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -824,7 +824,7 @@
                       </div>
 
 
-                      <div class="col-xs-12 col-sm-5 col-md-4">
+                      <!-- <div class="col-xs-12 col-sm-5 col-md-4">
                           <div class="row">
                               <div class="col-xs-12 col-sm-12 col-md-12">
                                   <div class="graph"><img alt="" class="img-responsive" src=
@@ -832,7 +832,7 @@
                                   </div>
                               </div>
                           </div>
-                      </div>
+                      </div> -->
                   </div>
               </div>
           </div>
@@ -886,7 +886,7 @@
                                         </div>
 
 
-                                        <div class="col-xs-12 col-sm-5 col-md-4">
+                                        <!-- <div class="col-xs-12 col-sm-5 col-md-4">
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-12 col-md-12">
                                                     <div class="graph"><img alt="" class="img-responsive" src=
@@ -894,7 +894,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
