--- a/app/views/users/dailyupdate.html.erb
+++ b/app/views/users/dailyupdate.html.erb
@@ -3,6 +3,7 @@
       <!-- main content -->
 
       <div class="container">
+        <p id="notice"><%= notice %></p>
 
         <h2 class="animated bounceInRight">Health Diary</h2>
         <ul class="nav nav-tabs">
