--- a/app/views/users/healthupload.html.erb
+++ b/app/views/users/healthupload.html.erb
@@ -1,4 +1,6 @@
 <div class="container">
+  <p id="notice"><%= notice %></p>
+
         <h3 class="center animated bounceInRight"> Upload Your Medical Record</h3>
         <div class="medical_record animated fadeInUp">
           <div class="row center">
