--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -14,6 +14,7 @@
 
     <div class="cards animated bounceInRight">
         <!-- GENERAL INFO -->
+        <p id="notice"><%= notice %></p>
 
 
         <div class="row">
