--- a/app/views/users/theme/_nav.html.erb
+++ b/app/views/users/theme/_nav.html.erb
@@ -8,9 +8,9 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="">
-          <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <!-- <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <i class="fa fa-cog fa-lg" aria-hidden="true"></i>
-          </a>
+          </a> -->
           <ul class="dropdown-menu dropdown-usermenu pull-right">
             <li><a href="javascript:;">  Profile</a>
             </li>
