--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <br>
 <h2>Sign up</h2>
+<p id="notice"><%= notice %></p>
 
 <div class="content-section-login center">
         <div class="container">
