--- a/app/views/pages/theme/_menu.html.erb
+++ b/app/views/pages/theme/_menu.html.erb
@@ -15,9 +15,15 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
                 <li>
-                    <a href="login_page.html">Login</a>
+                  <%= link_to "Dashboard", dashboard_path(@user) %>
                 </li>
+                <% else %>
+                <li>
+                    <%= link_to "Login", root_path %>
+                </li>
+                <% end%>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -25,4 +31,3 @@
     <!-- /.container -->
 </nav>
 <br>
-
