--- a/app/views/users/theme/_sidebar_menu.html.erb
+++ b/app/views/users/theme/_sidebar_menu.html.erb
@@ -46,12 +46,14 @@
             <%= link_to 'Update Info', edit_user_path(@user)%>
           </li>
           <li>
-            <%= link_to 'Update Password', edit_user_registration_path(@user)%>
+            <!-- <a rel="nofollow" data-method="delete" href="/user/sign_out">Logout</a> -->
+            <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+
           </li>
         </ul>
       </li>
       <li>
-         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+         <%= link_to('Logout', '/user/sign_out', :method => :delete) %>
       </li>
     </ul>
     <% end %>
