--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,9 +5,9 @@
 <% end -%>
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-  <%#= link_to "LOG IN/SIGN UP WITH FACEBOOK ", user_omniauth_authorize_path(:facebook), class: "btn btn-info btn-block" %>
+  <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
 
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
+    <%#= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
 
